--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ version = "0.1.0"
 
 build = "build.rs"
 
+homepage="https://github.com/tqlab/proc-rs"
+license = "GPL"
+
 [build-dependencies]
 bindgen = {version = "0.60", default-features = false, optional = true, features = ["runtime"]}
 cc = "1.0"
