--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,7 @@ version = "0.1.0"
 build = "build.rs"
 
 homepage = "https://github.com/tqlab/proc-rs"
-license = "GPL"
-
-exclude = [
-  "proc-c/*",
-]
+license = "GPL-3.0-or-later"
 
 [build-dependencies]
 bindgen = {version = "0.60", default-features = false, optional = true, features = ["runtime"]}
